# ISAAC-CXX

./: README.md
ISAAC32/: CMakeLists.txt  test.sh
ISAAC32/new/include/: isaac32.hpp
ISAAC32/new/src/: isaac32.cpp  main.cpp
ISAAC32/old/include/: standard.h
ISAAC32/old/src/: rand.c
ISAAC64/: CMakeLists.txt  test.sh
ISAAC64/new/include/: isaac64.hpp
ISAAC64/new/src/: isaac64.cpp  main.cpp
ISAAC64/old/src/: isaac64.c
